# symbiote

symbiote/: CLAUDE.md  CRITICAL_FLOWS_VALIDATION.md  DEMO_RESULTS.md  DEPLOYMENT.md  FINAL_PROJECT_SUMMARY.md  FINAL_VALIDATION_REPORT.md  Makefile  PRODUCTION_CHECKLIST.md  PROJECT_COMPLETE.md  README.md  VALIDATION_RESULTS.md  __init__.py  critical_flows.py  demo_minimal.py  launch_production.py  production_core.py  pyproject.toml  quickstart.sh  release_package.sh  requirements.txt  requirements_production.txt  symbiote_production.yaml  validate_production.py
symbiote/cli/: __init__.py  sym.py
symbiote/daemon/: algorithms.py  algorithms_production.py  bus.py  capture.py  config.py  consent.py  error_handling.py  main.py  mock_indexers.py  mock_metrics.py  privacy_gates.py  production_integration.py  search.py  search_orchestrator.py  synthesis_worker.py  synthesis_worker_production.py
symbiote/daemon/indexers/: __init__.py  analytics.py  analytics_production.py  fts.py  fts_production.py  vector.py  vector_production.py
symbiote/releases/symbiote-1.0.0/: CHANGELOG.md  Makefile  QUICKSTART.md  README.md  VERSION  install.sh  requirements.txt  run.sh  symbiote.yaml.example
symbiote/scripts/: chaos_inject.py  eval_retrieval.py  gen_vault.py  run_benchmarks.py
symbiote/test_vault/.sym/: daemon.pid
symbiote/test_vault/daily/: 2025-08-19.md
symbiote/tests/: __init__.py  test_algorithms.py  test_capture.py  test_event_bus.py  test_security_privacy.py
symbiote/tests/functional/: FUNCTIONAL_TESTS_SUMMARY.md  README.md  demo_functional_tests.py  run_all_functional_tests.py  (+2 more)
symbiote/validation/: demo_flow.py  run_validation.py
(+25 files in other folders)
